# rust_101

./: README.md
docs/basic/: syntax.md
projects/borrow_and_mutexample/: Cargo.toml
projects/borrow_and_mutexample/src/: main.rs
projects/borrow_example/: Cargo.toml
projects/borrow_example/src/: main.rs
projects/guessing_game/: Cargo.toml
projects/guessing_game/src/: main.rs
projects/hashmap_borrow/: Cargo.toml
projects/hashmap_borrow/src/: main.rs
projects/hello_world/: README.md  helloworld  helloworld.rs
projects/hockey_player/: Cargo.toml
projects/hockey_player/src/: main.rs
projects/minigrep/src/: lib.rs  main.rs
projects/mutability/src/: main.rs
projects/noise_gate/: Cargo.toml  README.md
projects/noise_gate/examples/: wav-splitter.rs
projects/noise_gate/src/: lib.rs
projects/slice_example/: Cargo.toml
projects/slice_example/src/: main.rs
projects/string/src/: main.rs
projects/string_slice_emoji_error/: Cargo.toml
projects/string_slice_emoji_error/src/: main.rs
projects/tempoary_var_borrow/: Cargo.toml
projects/tempoary_var_borrow/src/: main.rs
projects/time/src/: main.rs
projects/tract_exp/: Cargo.toml  README.md  download_related_src.sh
projects/tract_exp/src/: main.rs
projects/triangle/src/: main.rs
projects/wealth_manager/: Cargo.toml
projects/wealth_manager/src/: main.rs
projects/wealth_manager/src/stocks/: mod.rs
projects/wealth_manager/src/stocks/enums/: mod.rs  order_types.rs
projects/wealth_manager/src/stocks/structs/: mod.rs  order.rs  stock.rs  utils.rs
